Fix name state column text align

--- a/frontend/covid19site/src/components/StatesCasesTables/styles.scss
+++ b/frontend/covid19site/src/components/StatesCasesTables/styles.scss
@@ -49,6 +49,7 @@
           & a {
             color: #244ccf;
             text-decoration: underline;
+            margin: 0px;
           }
 
           & a:hover {
